[tool.poetry]
name = "pydantic_numpy"
version = "4.1.0"
description = "Pydantic Model integration of the NumPy array"
authors = ["Can H. Tartanoglu", "Christoph Heindl"]
maintainers = ["Can H. Tartanoglu <python@rotas.mozmail.com>"]
readme = "README.md"
homepage = "https://github.com/caniko/pydantic-numpy"
license = "BSD-4"

keywords = ["pydantic", "numpy", "typing", "validation"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent"
]

packages = [{include = "pydantic_numpy"}]

[tool.poetry.dependencies]
python = ">=3.9, <3.13"
compress-pickle = { version = "*", extras = ["lz4"] }
ruamel-yaml = "^0.18.5"

numpy = ">=1.23.0"
pydantic = "^2.0"
semver = "^3.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
parameterized = "^0.9.0"
hypothesis = "^6.82.0"
orjson = "*"
setuptools = "^68.0.0"

[tool.poetry.group.format.dependencies]
black = "^23.7.0"
isort = "^5.12.0"
ruff = "^0.0.285"

[tool.poetry.group.typecheck.dependencies]
mypy = "*"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::hypothesis.errors.NonInteractiveExampleWarning",
    "ignore:invalid value encountered in multiply:RuntimeWarning",
]

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 120
ignore-init-module-imports = true
ignore = ["F403", "F405"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"