[tool.poetry]
name = "pydantic_numpy"
version = "6.0.1"
description = "Pydantic Model integration of the NumPy array"
authors = ["Can H. Tartanoglu", "Christoph Heindl"]
maintainers = ["Can H. Tartanoglu <python@rotas.mozmail.com>"]
readme = "README.md"
homepage = "https://github.com/caniko/pydantic-numpy"
license = "BSD-4"

keywords = ["pydantic", "numpy", "typing", "validation"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent"
]

packages = [{include = "pydantic_numpy"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
compress-pickle = { version = "*", extras = ["lz4"] }
ruamel-yaml = "^0.18.5"

numpy = ">=2.0.0"
pydantic = "^2.0"
semver = "^3.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
parameterized = "^0.9.0"
orjson = "*"
coverage = "^7.5.1"

[tool.poetry.group.format.dependencies]
black = "^23.7.0"
isort = "^5.12.0"
ruff = "*"

[tool.poetry.group.typecheck.dependencies]
mypy = "*"
pyright = "^1.1.338"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:invalid value encountered in multiply:RuntimeWarning",
]

[tool.black]
line-length = 120
target-version = ["py312"]

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 120
lint.ignore-init-module-imports = true
lint.ignore = ["F403", "F405"]

[tool.pyright]
include = ["pydantic_numpy/**", "tests/**"]
reportUnsupportedDunderAll = false

[tool.mypy]
ignore_missing_imports = true
packages = ["pydantic_numpy"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"